<resources>
    <string name="app_name">PracticeMVVM</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email (Optional)</string>
    <string name="save">Save</string>
    <string name="contact_list">Contact List</string>
</resources>